# compliance-mapper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  README.md
docs/: adding-frameworks.md  eu-ai-act-risk-classification.md  evidence-collection.md  frameworks.md  iso-42001-mapping.md
examples/: full_compliance_report.py  generate_gdpr_report.py  generate_soc2_evidence.py  risk-classification-example.py
mappings/: eu-ai-act-article-mapping.json  eu-ai-act-requirements.json  eu-ai-act-risk-categories.json  gdpr-articles.json  iso-42001-controls.json  nist-ai-rmf-functions.json  soc2-controls.json
python/: pyproject.toml
python/src/compliance_mapper/: __init__.py  mapper.py  multi_standard_report.py  report.py  risk_classifier.py  types.py
python/src/compliance_mapper/evidence/: __init__.py  collector.py  generator.py  package_generator.py  types.py
python/src/compliance_mapper/frameworks/: __init__.py  eu_ai_act.py  gdpr.py  interface.py  iso42001.py  nist_ai_rmf.py  soc2.py
python/tests/: conftest.py  test_eu_ai_act.py  test_gdpr.py  test_mapper.py  test_soc2.py  test_types.py
scripts/: fire-line-audit.sh
typescript/: package.json  tsconfig.json
typescript/src/: index.ts  mapper.ts  risk-classifier.ts  types.ts
typescript/src/evidence/: collector.ts  generator.ts  types.ts
typescript/src/frameworks/: eu-ai-act.ts  gdpr.ts  interface.ts  iso42001.ts  soc2.ts
typescript/src/report/: json.ts  markdown.ts
