[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-mapper"
version = "0.1.0"
description = "Auto-generate SOC 2, GDPR, and EU AI Act compliance evidence from governance configs and audit logs"
readme = "../README.md"
license = { text = "Business Source License 1.1" }
authors = [{ name = "MuVeraAI Corporation" }]
requires-python = ">=3.10"
keywords = ["compliance", "soc2", "gdpr", "eu-ai-act", "governance", "audit", "evidence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_mapper"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "N"]
ignore = ["ANN101", "ANN102"]
