[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-compliance-mapper"
version = "0.1.0"
description = "Auto-generate SOC 2, GDPR, and EU AI Act compliance evidence from governance configs and audit logs"
readme = "../README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "MuVeraAI Corporation", email = "oss@muverai.com" }]
requires-python = ">=3.10"
keywords = ["aumos", "compliance", "soc2", "gdpr", "eu-ai-act", "governance", "audit", "evidence", "ai-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.3",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/aumos-ai/compliance-mapper"
Repository = "https://github.com/aumos-ai/compliance-mapper"
Issues = "https://github.com/aumos-ai/compliance-mapper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_mapper"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "N"]
ignore = ["ANN101", "ANN102"]
